# ukrainian-ocr-pipeline

./: .gitignore  COLAB_SETUP.md  MANIFEST.in  Makefile  PACKAGE_SUMMARY.md  README.md  TESTING.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/workflows/: tests.yml
examples/: Full_Pipeline_Components_Demo.ipynb  Local_Testing_Demo.ipynb  Ukrainian_OCR_Colab_Demo.ipynb  Ukrainian_OCR_Local_Demo.ipynb  Ukrainian_OCR_Package_Demo.ipynb  basic_alto.xml  enhanced_alto.xml
examples/ukrainian_ocr_output/: 804-03494422-l-m-a-n2982-4-1001-00019_basic_segmentation.xml  804-03494422-l-m-a-n2982-4-1001-00019_complete_alto.xml  804-03494422-l-m-a-n2982-4-1001-00019_processing_report.json
tests/: __init__.py
tests/fixtures/: create_test_data.py
tests/integration/: __init__.py  test_import_integration.py  test_pipeline_integration.py
tests/unit/: test_config.py  test_gpu_utils.py  test_io_utils.py  test_ner.py  test_ocr.py  test_pipeline.py  test_segmentation.py
ukrainian_ocr/: __init__.py  cli.py  config.py
ukrainian_ocr/core/: __init__.py  batch_processor.py  config.py  enhancement.py  ner.py  ocr.py  pipeline.py  segmentation.py  surname_matcher.py
ukrainian_ocr/utils/: __init__.py  colab.py  gpu.py  io.py  models.py  visualization.py
